--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/MrUnl/MessageApp.git"
+        "url": "https://github.com/MrUnl/MessageApp.git"
     },
     "author": "Ataberk ASLAN",
     "license": "MIT",
