--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "ejs": "^3.1.5",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
-        "socket.io": "^2.3.0"
+        "socket.io": "^2.3.0",
+        "ws": "^7.3.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.6"
