--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/MrUnl/MessageApp#readme",
     "dependencies": {
+        "cors": "^2.8.5",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
